feat(auth): switch active role route
